--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,10 @@ block var
 	- let title = 'Trang Chủ'
 	- let bodyClass = 'index-page'
 
-block banner,breadcrumb
 block main
-	include components/google-map/g-map
+	include ./components/index/i-1
+	include ./components/index/i-2
+	include ./components/index/i-3
+	include ./components/index/i-4
+	include ./components/index/i-5
 block scripts
