--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -50,9 +50,15 @@ html(lang="en")
 			.note Thông tin cá nhân đã đăng ký sẽ không thể thay đổi. Vui lòng kiểm tra kỹ và điền chính xác thông tin này.
 			.block-btn
 				button.btn HOÀN THÀNH
-		.block-thank-you#block-thank-you(style="displau:none")
+		.block-thank-you#block-thank-you(style="display:none")
 			.logo
 				img(src="./assets/images/logo.png", alt="", srcset="")
+			.desc
+				p CẢM ƠN BẠN ĐÃ THAM GIA BÌNH CHỌN
+				p CHO THẦN TƯỢNG CỦA MÌNH TẠI VLIVE AWARDS
+			.note
+				p Bạn đã hết lượt bình chọn hôm nay.
+				p Bạn có thể tiếp tục vote từ 00:00 ngày mai.
 		//- include scripts
 		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s&libraries=places")
 		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
