--- a/src/components/index/i-2.pug
+++ b/src/components/index/i-2.pug
@@ -1,5 +1,5 @@
 .index-2
 	figure
 		img.ofc(src="./assets/images/index/banner-2.png", alt="", srcset="")
-		button
+		button(data-fancybox href="https://www.youtube.com/watch?v=WsLNIixQE_I")
 			img.svg(src="./assets/images/icons/play.svg", alt="")
