--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -31,7 +31,7 @@
 							li Những fan tham gia FANSHIP của bất kì nghệ sĩ nào trong danh sách đề cử, được bình chọn tối đa 2 lần 1 ngày.
 							li 1 ngày được tính từ 00:00:01 tới 23:59:59.
 							li Thời gian bình chọn: Từ 09/12/2019 tới hết ngày 29/12/2019
-	.block-vote.mt-0
+	.container.block-vote.mt-0
 		.title
 			h3 V FANSHIP COMMUNITY
 			p Giải thương tôn vinh cộng đồng FANSHIP hoạt động tích cực trên VLIVE
@@ -43,7 +43,7 @@
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.block-vote
+	.container.block-vote
 		.title
 			h3 ARTIST OF THE YEAR
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
@@ -55,7 +55,7 @@
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.block-vote
+	.container.block-vote
 		.title
 			h3 BEST COMEBACK
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
@@ -67,7 +67,7 @@
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.block-vote
+	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
@@ -79,7 +79,7 @@
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.block-vote.small
+	.container.block-vote.small
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
 			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
@@ -91,7 +91,7 @@
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.block-vote.small
+	.container.block-vote.small
 		.title
 			h3 FAVOURITE V HEARTBEAT LIVE STAGE OF KPOP STAR
 			p Giải thưởng tôn vinh  ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích trên sân khấu V Heartbeat LIVE trong năm 2019.
