--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -106,11 +106,7 @@ main {
 }
 
 .block-vote {
-	max-width   : 1640px;
-	width       : 100%;
-	margin-right: auto;
-	margin-left : auto;
-	margin-top  : 45px;
+	margin-top: 45px;
 
 	&.small {
 		max-width: 1300px;
@@ -256,4 +252,31 @@ main {
 	background-image: url(../assets/images/index/bg-block-thank.png);
 	border-radius   : 10px;
 	width           : 840px;
+
+	.logo {
+		img {
+			display: block;
+			margin : 0 auto;
+		}
+	}
+
+	.desc {
+		text-align   : center;
+		margin-bottom: 40px;
+
+		p {
+			color      : #1A1A1A;
+			font-weight: 700;
+			font-size  : 24px;
+		}
+	}
+
+	.note {
+		text-align: center;
+
+		p {
+			font-size: 24px;
+			color    : #1A1A1A;
+		}
+	}
 }
