--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -1,7 +1,7 @@
 header
 	.container
 		.row.no-gutters.h-110px
-			.col-lg-auto.list-logo
+			.list-logo
 				-for(i=1;i<4;i++)
 					.item
 						img(src="./assets/images/header/logo-"+i+".png", alt="", srcset="")
