--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -6,6 +6,10 @@
 	figure {
 		height: 100%;
 	}
+
+	@media (max-width: 1024.98px) {
+		height: auto;
+	}
 }
 
 .index-2,
@@ -26,6 +30,17 @@
 		transform : translate(-50%, -50%);
 		background: none;
 		border    : none;
+	}
+
+	@media (max-width: 1024.98px) {
+		height: auto;
+
+		button {
+			svg {
+				width : 50%;
+				height: 50%;
+			}
+		}
 	}
 }
 
@@ -178,5 +193,9 @@
 
 	figure {
 		height: 100%;
+	}
+
+	@media (max-width: 1024.98px) {
+		height: auto;
 	}
 }
