--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -13,7 +13,7 @@ header
 								img.ofc(src="./assets/images/icons/user-default.svg", alt="", srcset="")
 						//- .name Hùng
 						.button-login
-							a(data-fancybox data-src="#form-dk") Đăng nhập
+							a(href="#") Đăng nhập
 				.nav-item
 					.list-download
 						.item
