--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -27,29 +27,16 @@
 							img(src="./assets/images/icons/icons-item-03-index-4.svg", alt="")
 						.title-content Quyền lợi bình chọn:
 						ul
-							li Mỗi fan được bình chọn 1 lần 1 ngày.
+							li Mỗi fan được bình chọn 1 lần 1 ngày. 
 							li Những fan tham gia FANSHIP của bất kì nghệ sĩ nào trong danh sách đề cử, được bình chọn tối đa 2 lần 1 ngày.
 							li 1 ngày được tính từ 00:00:01 tới 23:59:59.
-							li Thời gian bình chọn: Từ 09/12/2019 tới hết ngày 29/12/2019
-	.container.block-vote.mt-0
+	.container.block-vote
 		.title
 			h3 V FANSHIP COMMUNITY
 			p Giải thương tôn vinh cộng đồng FANSHIP hoạt động tích cực trên VLIVE
 		.row.no-gutters.list-vote
 			-for(i=1;i<6;i++)
-				.item-vote
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
-						figcaption
-							h5 TÊN CA SĨ
-	.container.block-vote
-		.title
-			h3 ARTIST OF THE YEAR
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
-		.row.no-gutters.list-vote
-			-for(i=1;i<6;i++)
-				.item-vote
+				.item-vote(data-value=i)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
@@ -58,10 +45,26 @@
 	.container.block-vote
 		.title
 			h3 BEST COMEBACK
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+			p Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng,
+				br
+				| tạo xu hướng trong năm 2019 
 		.row.no-gutters.list-vote
 			-for(i=1;i<6;i++)
-				.item-vote
+				.item-vote(data-value=i)
+					figure
+						.box-img
+							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
+						figcaption
+							h5 TÊN CA SĨ
+	.container.block-vote
+		.title
+			h3 BEST COMEBACK
+			p Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng,
+				br
+				| tạo xu hướng trong năm 2019 
+		.row.no-gutters.list-vote
+			-for(i=1;i<6;i++)
+				.item-vote(data-value=i)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
@@ -70,38 +73,40 @@
 	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+			p Giải thưởng tôn vinh nghệ sĩ trẻ tài năng, được yêu thích của năm 2019.
 		.row.no-gutters.list-vote
 			-for(i=1;i<6;i++)
-				.item-vote
+				.item-vote(data-value=i)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.container.block-vote.small
+	.container.block-vote
 		.title
 			h3 FAVOURITE RISING STAR OF THE YEAR
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+			p Giải thưởng tôn vinh nhóm nhạc được yêu thích trong năm 2019.
 		.row.no-gutters.list-vote
 			-for(i=1;i<5;i++)
-				.item-vote
+				.item-vote(data-value=i)
 					figure
 						.box-img
 							img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 						figcaption
 							h5 TÊN CA SĨ
-	.container.block-vote.small
+	.container.block-vote
 		.title
 			h3 FAVOURITE V HEARTBEAT LIVE STAGE OF KPOP STAR
-			p Giải thưởng tôn vinh  ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích trên sân khấu V Heartbeat LIVE trong năm 2019.
+			p Giải thưởng tôn vinh  ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích
+				br
+				| trên sân khấu V Heartbeat LIVE trong năm 2019.
 		.row.no-gutters.list-vote.border-0
 				-for(i=1;i<12;i++)
-					.item-vote
+					.item-vote(data-value=i)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/"+i+".png", alt="")
 							figcaption
 								h5 TÊN CA SĨ
-	.block-btn.shadow
-		a(data-fancybox data-src="#block-thank-you").btn BÌNH CHỌN
+	.btn.shadow
+		button#btn-vote(data-url="#") BÌNH CHỌN
