--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -16,21 +16,21 @@
 	border-bottom: 0 !important;
 }
 
-.block-btn {
+.btn {
 	cursor       : pointer;
 	max-width    : 256px;
 	width        : 100%;
 	margin       : 0 auto;
 	padding      : 3px;
-	background   : linear-gradient(to right, rgba(255, 120, 174, 1) 0%, rgba(241, 241, 244, 1) 48%, rgba(84, 246, 255, 1) 100%);
+	background   : linear-gradient(to right, rgba(84, 246, 255, 1) 0%, rgba(241, 241, 244, 1) 48%, rgba(255, 120, 174, 1) 100%);
 	border-radius: 13px;
 
 	&.shadow {
 		box-shadow: 0 16px 22px rgba($color: #000000, $alpha: .3);
-
 	}
 
-	.btn {
+	button,
+	a {
 		display      : block;
 		max-width    : 249px;
 		width        : 100%;
@@ -41,6 +41,7 @@
 		background   : #1A1A1A;
 		line-height  : 67px;
 		border-radius: 10px;
+		border       : 0;
 		padding      : 0 50px;
 		text-align   : center;
 	}
@@ -77,10 +78,6 @@
 	display: none;
 }
 
-main {
-	margin-top: 110px;
-}
-
 .ofc {
 	width          : 100%;
 	height         : 100%;
@@ -103,40 +100,63 @@ main {
 		font-size: 18px;
 		color    : rgba($color:#1A1A1A, $alpha: .7);
 	}
+
+	@media (max-width: 1024.98px) {
+		h3 {
+			font-size: 38px;
+		}
+	}
 }
 
 .block-vote {
 	margin-top: 45px;
 
-	&.small {
-		max-width: 1300px;
-
-		.list-vote {
-			.item-vote {
-				flex     : 0 0 25%;
-				max-width: 25%;
-			}
-		}
-	}
-
 	.list-vote {
-		margin        : 25px -27.5px 0;
+		margin        : 30px -27.5px 0;
 		padding-bottom: 25px;
 		border-bottom : 1px solid rgba($color:#565656, $alpha: .1);
 
 		.item-vote {
+			cursor       : pointer;
 			padding      : 0 27.5px;
 			flex         : 0 0 20%;
 			max-width    : 20%;
 			margin-bottom: 45px;
 
+			&.checked {
+				figure {
+					.box-img {
+						img {
+							border-radius: 10px;
+						}
+
+						&:after {
+							content   : '';
+							transition: .3s all ease-in-out;
+						}
+					}
+				}
+			}
+
 			figure {
 				.box-img {
+					position     : relative;
 					width        : 100%;
-					height       : 325px;
 					border-radius: 10px;
 					overflow     : hidden;
 					box-shadow   : 0 3px 27px rgba($color:#54F7FF, $alpha: .4);
+
+					&:after {
+						content      : none;
+						position     : absolute;
+						top          : 0;
+						left         : 0;
+						width        : 100%;
+						height       : 100%;
+						border       : 4px solid #ffffff;
+						border-radius: 10px;
+						transition   : .3s all ease-in-out;
+					}
 				}
 
 				figcaption {
@@ -159,9 +179,30 @@ main {
 			}
 		}
 	}
+
+	@media (max-width: 1024.98px) {
+		margin-top: 15px;
+
+		.list-vote {
+			margin: 30px -15px 0;
+
+			.item-vote {
+				flex         : 0 0 33.3333333%;
+				max-width    : 33.3333333%;
+				padding      : 0 15px;
+				margin-bottom: 30px;
+
+				figure {
+					figcaption {
+						margin-top: 15px;
+					}
+				}
+			}
+		}
+	}
 }
 
-.form-dang-ky-thong-tin {
+.form-vote {
 	border-radius: 10px;
 	width        : 976px;
 	padding      : 75px 140px;
@@ -184,6 +225,10 @@ main {
 			max-width: 50%;
 			font-size: 18px;
 			color    : #46465A;
+
+			span {
+				color: red;
+			}
 		}
 
 		.input-group {
@@ -192,7 +237,7 @@ main {
 
 			input {
 				width         : 100%;
-				color         : #E8E8E8;
+				color         : #46465A;
 				border        : 0;
 				border-bottom : 1px solid #E8E8E8;
 				padding-bottom: 3px;
@@ -247,7 +292,7 @@ main {
 	}
 }
 
-.block-thank-you {
+.form-thank {
 	padding         : 45px 120px 75px;
 	background-image: url(../assets/images/index/bg-block-thank.png);
 	border-radius   : 10px;
