--- a/src/scss/pages/components/_layout/footer.scss
+++ b/src/scss/pages/components/_layout/footer.scss
@@ -4,6 +4,7 @@ footer {
 
 	.copy-right {
 		align-self: flex-end;
+		padding   : 0 15px;
 
 		p {
 			font-size: 18px;
@@ -13,6 +14,7 @@ footer {
 
 	.list-social-media {
 		margin-left: auto;
+		padding    : 0 15px;
 
 		p {
 			font-size    : 18px;
