--- a/src/scss/pages/components/_layout/header.scss
+++ b/src/scss/pages/components/_layout/header.scss
@@ -1,9 +1,6 @@
 header {
-	position           : fixed;
 	width              : 100%;
 	height             : 110px;
-	top                : 0;
-	left               : 0;
 	background         : #1A1A1A;
 	background-image   : url(../assets/images/header/background.png);
 	background-repeat  : no-repeat;
@@ -122,8 +119,11 @@ header {
 			.nav-item {
 				.login {
 					.avatar {
-						margin-right : 10px;
-						padding-right: 10px;
+						display: none;
+					}
+
+					.button-login {
+						font-size: 14px;
 					}
 				}
 
