--- a/src/components/_layout/_footer.pug
+++ b/src/components/_layout/_footer.pug
@@ -1,10 +1,10 @@
 footer
 	.container
 		.row
-			.copy-right
+			.copy-right.col-md-6
 				p Copyright © NAVER Vietnam Ltd.
 				p Privacy Policy Cookies Policy Terms of Use
-			.list-social-media
+			.list-social-media.col-md-6
 				p Chia sẻ liên kết
 				ul
 					li
