--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -4,7 +4,8 @@ header
 			.list-logo
 				-for(i=1;i<4;i++)
 					.item
-						img(src="./assets/images/header/logo-"+i+".png", alt="", srcset="")
+						a(href="#")
+							img(src="./assets/images/header/logo-"+i+".png", alt="", srcset="")
 			.list-nav
 				.nav-item
 					.login
