--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -45,6 +45,17 @@
 		padding      : 0 50px;
 		text-align   : center;
 	}
+
+	@media (max-width: 767.98px) {
+		max-width: 150px;
+
+		a,
+		button {
+			font-size  : 14px;
+			padding    : 0 25px;
+			line-height: 50px;
+		}
+	}
 }
 
 .fancybox-slide--html {
@@ -104,6 +115,20 @@
 	@media (max-width: 1024.98px) {
 		h3 {
 			font-size: 38px;
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		h3 {
+			font-size: 28px;
+		}
+
+		p {
+			font-size: 14px;
+
+			br {
+				display: none;
+			}
 		}
 	}
 }
@@ -197,6 +222,18 @@
 						margin-top: 15px;
 					}
 				}
+			}
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		.list-vote {
+			padding-bottom: 0;
+
+			.item-vote {
+				flex         : 0 0 50%;
+				max-width    : 50%;
+				margin-bottom: 15px;
 			}
 		}
 	}
