--- a/src/scss/pages/components/_layout/footer.scss
+++ b/src/scss/pages/components/_layout/footer.scss
@@ -17,13 +17,16 @@ footer {
 		padding    : 0 15px;
 
 		p {
+			text-align   : right;
 			font-size    : 18px;
 			color        : #707070;
 			margin-bottom: 13px;
+			margin-right : 45px;
 		}
 
 		ul {
-			display: flex;
+			display        : flex;
+			justify-content: flex-end;
 
 			li {
 				margin-right: 25px;
@@ -31,6 +34,37 @@ footer {
 				&:last-child {
 					margin-right: 0;
 				}
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		padding: 50px 0;
+	}
+
+	@media (max-width: 767.98px) {
+		padding: 25px 0;
+
+		.copy-right {
+			margin-bottom: 15px;
+
+			p {
+				text-align: center;
+				font-size : 14px;
+			}
+
+			align-self: unset;
+		}
+
+		.list-social-media {
+			p {
+				margin-right: 0;
+				font-size   : 14px;
+				text-align  : center;
+			}
+
+			ul {
+				justify-content: center;
 			}
 		}
 	}
