--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -1,3 +1,3 @@
 .index-1
 	figure
-		img.ofc(src="../assets/images/index/banner-1.png", alt="", srcset="")
+		img.ofc(src="./assets/images/index/banner-1.png", alt="", srcset="")
