UPDATE SUBMIT FORM AJAX

--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -46,6 +46,11 @@ html(lang="en")
 							span *
 						.input-group
 							input#Form-Phone(type="text" placeholder="Nhập thông tin")
+					.form-group
+						label Email
+							span *
+						.input-group
+							input#Form-Email(type="text" placeholder="Nhập địa chỉ Email")
 				.desc
 					ul
 						li Công ty TNHH Deloitte Việt Nam sẽ là đơn vị chịu trách nhiệm lựa chọn người chiến thắng một cách độc lập cho chương trình này.
@@ -59,9 +64,6 @@ html(lang="en")
 				.logo
 					img(src="./assets/images/logo.png", alt="", srcset="")
 				.desc
-					p CẢM ƠN BẠN ĐÃ THAM GIA BÌNH CHỌN
-					p CHO THẦN TƯỢNG CỦA MÌNH TẠI VLIVE AWARDS
-				.note
 		block scripts
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
