--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -10,10 +10,6 @@ body {
 	display: none !important;
 }
 
-.h-110px {
-	height: 110px !important;
-}
-
 .mt-0 {
 	margin-top: 0 !important;
 }
@@ -351,22 +347,19 @@ body {
 	}
 
 	.desc {
-		text-align   : center;
-		margin-bottom: 40px;
-
 		p {
-			color      : #1A1A1A;
-			font-weight: 700;
-			font-size  : 24px;
-		}
-	}
+			text-align: center;
+			color     : #1A1A1A;
+			font-size : 24px;
 
-	.note {
-		text-align: center;
+			&:nth-child(1),
+			&:nth-child(2) {
+				font-weight: 700;
+			}
 
-		p {
-			font-size: 24px;
-			color    : #1A1A1A;
+			&:nth-child(2) {
+				margin-bottom: 40px;
+			}
 		}
 	}
 }
