--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -173,12 +173,16 @@
 
 		&:nth-child(6),
 		&:nth-child(7) {
-			max-width: 1300px;
+			.row-wrapper {
+				max-width: 1300px;
+				width    : 100%;
+				margin   : 0 auto;
 
-			.list-vote {
-				.item-vote {
-					flex     : 0 0 25%;
-					max-width: 25%;
+				.list-vote {
+					.item-vote {
+						flex     : 0 0 25%;
+						max-width: 25%;
+					}
 				}
 			}
 		}
