--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
 		input#session-code(type="text" hidden)
 		#loading
 			.logo-loader
-				img(src="./assets/images/icons/loading.svg", alt="")
+				img(src="./assets/images/logo.png", alt="")
 			.progstat-wrapper Loading:
 				span#progstat 0
 				| %
