--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends components/_layout/_layout.pug
 
 block var
-	- let title = 'Trang Chủ'
+	- let title = 'Vlive'
 	- let bodyClass = 'index-page'
 
 block main
