--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -11,7 +11,6 @@ html(lang="en")
 		link(rel="stylesheet", href="./css/core.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
 	body
-		input#session-code(type="text" hidden)
 		#loading
 			.logo-loader
 				img(src="./assets/images/logo.png", alt="")
@@ -58,7 +57,7 @@ html(lang="en")
 						li VLIVE đảm bảo thông tin cá nhân của bạn sẽ không được chia sẻ cho bên thứ 3 nào khác ngoài Công ty TNHH Deloitte.
 				.note Thông tin cá nhân đã đăng ký sẽ không thể thay đổi. Vui lòng kiểm tra kỹ và điền chính xác thông tin này.
 				.btn
-					button#btn-submit(data-fancybox data-url="#") HOÀN THÀNH
+					button#btn-submit(data-url="#") HOÀN THÀNH
 		.d-none
 			.form-thank#form-thank
 				.logo
