--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -26,6 +26,7 @@ html(lang="en")
 			#js-page-verify(class=bodyClass hidden)
 		block footer
 			include _footer.pug
+		input#recaptcha(type="text" hidden name="g-recaptcha-response")
 		.d-none
 			.form-vote#form-vote
 				.title-form NHẬP THÔNG TIN CÁ NHÂN
